__init__ imports now modules rather than classes for Runner.py
git-svn-id: svn+ssh://sshgw-bs.informatik.uni-tuebingen.de/abi-projects/QBiC/PortalDevelopment/svn@35 a0440ff8-2b04-4d88-a457-8e570ff6c9eb

--- a/QPort/portalWorkflows/test/ruffus/OpenMSQC/guse_param_test/parameter.ini
+++ b/QPort/portalWorkflows/test/ruffus/OpenMSQC/guse_param_test/parameter.ini
@@ -44,6 +44,14 @@ QCExtractor.out_delete_this_tag = csv
 
 fractionalMass.out_delete_this_tag = png
 
+IDRatio.out_delete_this_tag = png
+
+MassAcc.out_delete_this_tag = png
+
+MassError.out_delete_this_tag = png
+
+TIC.out_delete_this_tag = png
+
 QCEmbedder.out_delete_this_tag = qcML
 
 QCShrinker.out_delete_this_tag = qcML
