--- a/QPort/portalWorkflows/test/ruffus/SimpleMapIDsWithFeature/parameter.ini
+++ b/QPort/portalWorkflows/test/ruffus/SimpleMapIDsWithFeature/parameter.ini
@@ -1,12 +1,12 @@
 WORKFLOW = labelfreeQuantQT_1390235830882
 
+DecoyDatabase.append = True
+
 OMSSAAdapter.out_delete_this_tag = idXML
 
 OMSSAAdapter.omssa_executable = /opt/omssa-2.1.9.linux/omssacl
 
 DATABASE = /home/wojnar/uniprot_homo_sapiens_Complete_proteome_reviewed_2014Feb03.fasta
-
-FILE = /opt/Labelfree_Workflow_QBiC/Example_Data/tiny/velos005614.mzML
 
 XTandemAdapter.out_delete_this_tag = idXML
 
@@ -22,9 +22,9 @@ ConsensusID.out_delete_this_tag = idXML
 
 PeptideIndexer.out_delete_this_tag = idXML
 
-PeptideIndexer.decoy_string = sw
+PeptideIndexer.missing_decoy_action = warn
 
-PeptideIndexer.prefix = True
+#PeptideIndexer.prefix = True
 
 #PeptideIndexer.enzyme:specificity = none
 
@@ -34,44 +34,14 @@ IDFilter.out_delete_this_tag = idXML
 
 IDMapper.out_delete_this_tag = featureXML
 
-QCCalculator.out_delete_this_tag = qcML
-
-QCExtractor.outputParameter = -out_csv
-
-QCExtractor.out_delete_this_tag = csv
-
-fractionalMass.out_delete_this_tag = png
-
-IDRatio.out_delete_this_tag = png
-
-MassAcc.out_delete_this_tag = png
-
-MassError.out_delete_this_tag = png
-
-TIC.out_delete_this_tag = png
-
-QCEmbedder.out_delete_this_tag = qcML
-
-QCShrinker.out_delete_this_tag = qcML
-
-bwa_align.n = 0.04
-
-bwa_align.o = 1
-
-sam_to_bam.S = True
-
-sam_to_bam.u = True
-
-bwa_align.d = 10
-
-Refgenome = EC_K12
-
 SPACE = QBIC
 
 PROJECT = BWAT
 
 COMMENT = boolean parameter# started 14-01-20 17:37
 
-BASEDIR = /home/guseuser/tmp/MapIDWithFeatureTest
+#BASEDIR = /home/guseuser/tmp/MapIDWithFeatureTest
 
-WORKDIR = /home/guseuser/tmp/MapIDWithFeatureTest
+#WORKDIR = /home/guseuser/tmp/MapIDWithFeatureTest
+
+#SUBJOBLIST = FILE__0__1,
