Printer database, experiment names and optional sample subselection
Printer for barcode can be chosen if user is admin or part of a project
that includes a custom sticker printer in the database (new sql schema)
Experiment secondary names are shown in the barcode selection, if
available
FilterTable lets users further search and select samples of one or more
experiments (useful for large experiments) to print

--- a/ProjectWizard/ivy.xml
+++ b/ProjectWizard/ivy.xml
@@ -40,7 +40,8 @@
 		<!-- Compiler for custom widget sets. Should not be deployed -->
 		<dependency org="com.vaadin" name="vaadin-client-compiler"
 			rev="&vaadin.version;" conf="widgetset-compile->default" />
-		
+		<!-- filter table -->	
+		<dependency org="org.vaadin.addons" name="filteringtable" rev="0.9.11.v7" />
 		<!-- Webdav upload -->	
 		<dependency org="com.github.lookfirst" name="sardine" rev="5.5" />
 		<!-- Graphs -->
