--- a/ProjectWizard/ivy.xml
+++ b/ProjectWizard/ivy.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <!DOCTYPE ivy-module [
-	<!ENTITY vaadin.version "7.4.3">
+	<!ENTITY vaadin.version "7.7.3">
 ]>
 <ivy-module version="2.0"
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
@@ -40,12 +40,21 @@
 		<!-- Compiler for custom widget sets. Should not be deployed -->
 		<dependency org="com.vaadin" name="vaadin-client-compiler"
 			rev="&vaadin.version;" conf="widgetset-compile->default" />
-		<!-- filter table -->	
-		<dependency org="org.vaadin.addons" name="filteringtable" rev="0.9.11.v7" />
+		<!-- vaadin addons -->	
+		<dependency org="org.vaadin.addons" name="filteringtable" rev="0.9.15.v7" />
+		<dependency org="org.vaadin.addons" name="flexibleoptiongroup" rev="2.3.0" />
+		<dependency org="org.vaadin.addons" name="wizards-for-vaadin" rev="1.1.1" />
+		<dependency org="org.apache.commons" name="commons-lang3" rev="3.0"/>
 		<!-- Webdav upload -->	
 		<dependency org="com.github.lookfirst" name="sardine" rev="5.5" />
-		<!-- Graphs -->
-		<dependency org="org.jgrapht" name="jgrapht-core" rev="0.9.2" />
+		<!-- JSON -->
+		<dependency org="com.googlecode.json-simple" name ="json-simple" rev="1.1" />
+		<!-- QBiC -->
+		<dependency org="life.qbic.openbis" name="openbisclient" rev="1.1.3" />
+		<!--<dependency org="life.qbic" name="collections" rev="0.1-SNAPSHOT" changing="true"/> -->
+		<!--<dependency org="life.qbic.openbis" name="liferayandvaadinhelpers" rev="1.1.2" /> -->
+		<!-- maria db -->
+		<dependency org="org.mariadb.jdbc" name="mariadb-java-client" rev="1.1.7"/>
 		<!-- logging -->
 		<dependency org="org.apache.logging.log4j" name="log4j-api" rev="2.2" />
   		<dependency org="org.apache.logging.log4j" name="log4j-core" rev="2.2" />
