--- a/ProjectWizard/WebContent/WEB-INF/liferay-plugin-package.properties
+++ b/ProjectWizard/WebContent/WEB-INF/liferay-plugin-package.properties
@@ -1,10 +1,9 @@
 name=Projectwizard Application portlet
 short-description=ProjectWizard
-module-group-id=Vaadin
-module-incremental-version=1
+module-group-id=de.uni_tuebingen.qbic
+module-incremental-version=1.33
+short-description= QBiC Project Wizard
 #change-log=
 #page-uri=
-#author=
-license=Proprietary
-portal-dependency-jars=\
-    vaadin.jar
+author= Andreas Friedrich
+speed-filters-enabled=false
